--- a/css/styles.css
+++ b/css/styles.css
@@ -1,17 +1,9 @@
 @import 'global.css';
 @import 'main.css';
 
-.test-font{
-color: var(--dominantColor) !important;;
+.fa-row {
+    background-color: pink;
 }
-
-
-.test-font-2{
-    color:var(--dominantColor) !important;;
-}
-
-
-
 
 
 
