--- a/css/styles.css
+++ b/css/styles.css
@@ -2,8 +2,11 @@
 @import 'main.css';
 
 .fa-row {
-    background-color: pink;
+    background-color: var(--dominantColor) !important;
+    padding: 35px;
 }
 
-
+.fa-row-icon {
+    font-size: 60px;
+}
 
