--- a/css/styles.css
+++ b/css/styles.css
@@ -25,7 +25,11 @@
     font-size: 16px;
     padding: 20px;
     height: auto;
-    
+    margin-top: 20px;
+    margin-bottom: 18px;
+    font-family: "Roboto", sans-serif;
+    margin-left:auto;
+    margin-right: auto;
 }
 
 
